--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
         android:layout_alignBaseline="@+id/textView1"
         android:layout_alignBottom="@+id/textView1"
         android:layout_alignLeft="@+id/txtPort"
-        android:ems="10" >
+        android:ems="10"
+        android:inputType="number" >
 
         <requestFocus />
     </EditText>
@@ -46,7 +47,8 @@
         android:layout_alignBottom="@+id/textView2"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
-        android:ems="10" />
+        android:ems="10"
+        android:inputType="number" />
 
     <Button
         android:id="@+id/btnDiscover"
