--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
         android:layout_alignBaseline="@+id/textView1"
         android:layout_alignBottom="@+id/textView1"
         android:layout_alignLeft="@+id/txtPort"
+        android:layout_alignRight="@+id/txtPort"
         android:ems="10"
         android:inputType="number" >
 
@@ -45,27 +46,35 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="16dp"
+        android:layout_alignRight="@+id/btnSave"
         android:ems="10"
         android:inputType="number" />
-
-    <Button
-        android:id="@+id/btnDiscover"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btnSave"
-        android:layout_alignBottom="@+id/btnSave"
-        android:layout_alignLeft="@+id/txtPort"
-        android:text="Discover" />
 
     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/txtPort"
+        android:layout_alignRight="@+id/btnDiscover"
         android:layout_below="@+id/txtPort"
         android:layout_marginTop="17dp"
         android:text="Save" />
+
+    <ListView
+        android:id="@+id/lstDiscover"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/btnDiscover" >
+
+    </ListView>
+
+    <Button
+        android:id="@+id/btnDiscover"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/lstDiscover"
+        android:layout_below="@+id/btnSave"
+        android:layout_marginTop="20dp"
+        android:text="Discover" />
 
 </RelativeLayout>
