--- a/res/layout/listview_discover.xml
+++ b/res/layout/listview_discover.xml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="6dip">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="6dip" >
+
+    <TextView
+        android:id="@+id/host"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="12dip" />
+
     <LinearLayout
-        android:layout_width="0dip"
-        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="3"
         android:orientation="vertical" >
-        <TextView
-            android:id="@+id/toptext"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15dip"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/bottomtext"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textSize="12dip" />
-    </LinearLayout> 
+
+		<TextView
+		    android:id="@+id/hostname"
+		    android:layout_width="wrap_content"
+		    android:layout_height="match_parent"
+		    android:textSize="12dip" />
+  
+         <TextView
+             android:id="@+id/hostmac"
+             android:layout_width="wrap_content"
+             android:layout_height="match_parent"
+             android:textSize="12dip" />
+ 
+    </LinearLayout>     
 </LinearLayout>
