--- a/res/layout/livewidget.xml
+++ b/res/layout/livewidget.xml
@@ -11,8 +11,8 @@
         android:id="@+id/button"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:textSize="12sp" 
         android:textIsSelectable="false"
-        />
+        android:textSize="12sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
