--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
         android:layout_alignBottom="@+id/textView1"
         android:layout_alignParentRight="true"
         android:ems="10"
-        android:inputType="number" >
+        android:inputType="phone" >
 
         <requestFocus />
     </EditText>
