--- a/res/xml/livewidget.xml
+++ b/res/xml/livewidget.xml
@@ -17,7 +17,7 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="60dp"
     android:minHeight="60dp"
-    android:initialLayout="@layout/livewidget" 
+    android:initialLayout="@layout/widget" 
     android:widgetCategory="keyguard|home_screen"
     android:configure="com.codelixir.kommand.WidgetActivity" 
     />
