--- a/res/xml/widget.xml
+++ b/res/xml/widget.xml
@@ -20,4 +20,5 @@
     android:initialLayout="@layout/widget" 
     android:widgetCategory="keyguard|home_screen"
     android:configure="com.codelixir.kommand.WidgetActivity" 
+    android:previewImage="@drawable/widget"
     />
