--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -1,46 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/widget"
     android:layout_width="60dp"
     android:layout_height="60dp"
     android:background="#FFF"
-    android:focusable="true" 
+    android:focusable="true"
     android:padding="2dp"
-    >
+    android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btnOn"
-        android:layout_width="fill_parent"
-        android:layout_height="28dp"
-        android:layout_alignParentTop="true"
-        android:background="#FCD207"
-        android:text="On"
-        android:textIsSelectable="false"
-        android:textSize="12sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/btnOff"
-        android:layout_width="fill_parent"
-        android:layout_height="28dp"
-        android:layout_alignParentBottom="true"
-        android:background="#6D6D6D"
-        android:text="Off"
-        android:textIsSelectable="false"
-        android:textSize="12sp"
-        android:textStyle="bold" />
-    
     <TextView
         android:id="@+id/txtCommand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="light" 
+        android:layout_width="0dp"
+        android:layout_weight=".2"
+        android:layout_height="match_parent"
+        android:text="light"
         android:textColor="#808080"
-        android:background="#4B0082"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        
-        />
+        android:background="#4B0082" />
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight=".8"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btnOn"
+            android:layout_width="fill_parent"
+            android:layout_height="28dp"
+            android:background="#FCD207"
+            android:text="On"
+            android:textIsSelectable="false"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnOff"
+            android:layout_width="fill_parent"
+            android:layout_height="28dp"
+            android:background="#6D6D6D"
+            android:text="Off"
+            android:textIsSelectable="false"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+
+</LinearLayout>
