--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,112 +1,37 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/txtIp"
-        android:layout_marginTop="26dp"
-        android:text="PORT:" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/txtPort"
-        android:layout_marginTop="22dp"
-        android:text="MAC:" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="38dp"
-        android:text="IP:" />
-
-    <ListView
-        android:id="@+id/lstDiscover"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/btnDiscover" >
-    </ListView>
-
-    <EditText
-        android:id="@+id/txtMac"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView3"
-        android:layout_alignBottom="@+id/textView3"
-        android:layout_alignParentRight="true"
-        android:ems="10"
-        android:enabled="false" />
-
-    <EditText
-        android:id="@+id/txtPort"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignLeft="@+id/txtMac"
-        android:ems="10"
-        android:inputType="number" />
-
-    <EditText
-        android:id="@+id/txtIp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_alignParentRight="true"
-        android:ems="10"
-        android:inputType="phone" >
-
-        <requestFocus />
-    </EditText>
 
     <Button
-        android:id="@+id/btnSave"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btnWol"
-        android:layout_alignBottom="@+id/btnWol"
-        android:layout_alignRight="@+id/txtMac"
-        android:text="Save" />
+        android:text="light on"
+        android:id="@+id/button1" />
 
     <Button
-        android:id="@+id/btnDiscover"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/lstDiscover"
-        android:layout_below="@+id/btnSave"
-        android:text="Discover" />
+        android:text="light off"
+        android:id="@+id/button2" />
 
     <Button
-        android:id="@+id/btnWol"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btnHistory"
-        android:layout_below="@+id/txtMac"
-        android:layout_marginTop="18dp"
-        android:text="WOL" />
+        android:text="wind on"
+        android:id="@+id/button3" />
 
     <Button
-        android:id="@+id/btnHistory"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/lstDiscover"
-        android:layout_alignLeft="@+id/lstDiscover"
-        android:text="History" />
+        android:text="wind off"
+        android:id="@+id/button4" />
 
-</RelativeLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Settings"
+        android:id="@+id/buttonSettings" />
+
+</LinearLayout>
