--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Settings"
-        android:id="@+id/buttonSettings" />
+        android:id="@+id/buttonSettings"
+        android:visibility="gone" />
 
 </LinearLayout>
+
